<resources>
    <string name="app_name">Stay Sunny</string>
    <!-- Strings used for fragments for navigation -->
    <string name="name">Name: </string>
    <string name="user_name">Username: </string>
    <string name="last_names">Last names: </string>
    <string name="birth_date">Birth date: </string>
    <string name="referral_code">I have a referral code.</string>
    <string name="continue_button">Continue</string>
    <string name="code">Code: </string>
    <string name="welcome">"Welcome!"</string>
    <string name="permission">Permission</string>
    <string name="back_button_description">Botón de retroceso</string>
        <string name="login_user">Entrar</string>
    <string name="email">Email:</string>
    <string name="enter_password">Password:</string>
    <string name="reset_password">Forgot your password? Reset</string>
    <string name="create_account">Do not have an account? Register</string>
    <string name="register_user">Register</string>
    <string name="password_reset">Reset your password</string>
    <string name="button_reset">Reset password</string>
    <string name="description_reset">Enter the email address associated with your account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_button_description">Button to open setting</string>
    <string name="city">Karachi</string>
    <string name="date">Monday 7:00 AM</string>
    <string name="celsius">22 °C</string>
    <string name="greeting">Good morning\nWasim</string>
    <string name="wind">Wind</string>
    <string name="windInfo">4m/s</string>
    <string name="hour">7:00</string>
    <string name="sunrise">Sunrise</string>
    <string name="tempratureInfo">23°</string>
    <string name="temprature">Temprature</string>
    <string name="description_back">Go back</string>
    <string name="weather">Weather</string>
    <string name="week_weather">Week weather</string>
    <string name="account">Account</string>
</resources>